--- a/.github/workflows/git-version.yml
+++ b/.github/workflows/git-version.yml
@@ -1,5 +1,9 @@
 name: GitVersion Tag
 
+permissions:
+  id-token: write
+  contents: write
+
 on:
   pull_request:
     branches: [
@@ -28,14 +32,8 @@ jobs:
     - name: Calculate Version
       id: gitversion
       uses: gittools/actions/gitversion/execute@v0
-
-  display-semver:
-    name: Display Semantic Version
-    runs-on: ubuntu-latest
-    needs: calculate-version
-    env:
-      SEMVER: ${{ needs.calculate-version.outputs.semVer }}
-    steps:
-      - name: Display Version
-        run: |
-          echo SemVer: $SEMVER
+  - name: Tag repo
+    run: |
+      echo ${{ steps.gitversion.outputs.semVer }}
+      git tag v${{ steps.gitversion.outputs.semVer }}
+      git push origin $${{ steps.gitversion.outputs.semVer }}
