Fixed minor typo issue at branches line

--- a/.github/workflows/git-version.yml
+++ b/.github/workflows/git-version.yml
@@ -6,10 +6,7 @@ permissions:
 
 on:
   pull_request:
-    branches: [
-      "master",
-      "dev/master"
-    ]
+    branches: ["master", "dev/master"]
     types:
       - closed
 
