--- a/.github/workflows/git-version.yml
+++ b/.github/workflows/git-version.yml
@@ -32,6 +32,6 @@ jobs:
         git tag ${{ steps.gitversion.outputs.semVer }}
         git push origin ${{ steps.gitversion.outputs.semVer }}
     - name: Call .NET Build Workflow
-      uses: TheCodeKeep/ghActions-tester./github/workflows@main
+      uses: TheCodeKeep/ghActions-tester/.github/workflows@main
       with:
         buildVersion: ${{ steps.gitversion.outputs.semVer }}
